--- a/src/application/Core/views/scripts/index/index.phtml
+++ b/src/application/Core/views/scripts/index/index.phtml
@@ -1,1 +1,8 @@
+<?php $this->headTitle('Page d\'accueil') ?>
 <h1>Index</h1>
+<button id="test">TEST JS</button>
+
+<?php $this->inlineScript()->capture()?>
+$(document).ready(function(){
+
+}
